StudentDetails Page added and Css file added

--- a/views/studentDetails.ejs
+++ b/views/studentDetails.ejs
@@ -5,63 +5,218 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/form.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>Welcome Student</title>
 </head>
 
 <body>
 
-    <form action="/studentDetails" method="post" enctype="multipart/form-data">
-        <input type="text" placeholder="First Name" name="firstname" required>
-        <input type="text" placeholder="Middle Name" name="middlename" required>
-        <input type="text" placeholder="Last Name" name="lastname" required>
-        <input type="text" placeholder="Student ID" value="<%= student.studentID %>" name="studentID" required>
-        <input type="text" placeholder="Batch" value="<%= student.batch %>" name="batch" required>
-        <select name="myProgram" required>
-            <option value="Select" selected>Select</option>
+    <section class="form-body">
+        <form action="/logoutStudent?_method=DELETE" method="POST">
+            <button type="submit" class="lgbtn" onclick="event.preventDefault(); showConfirmation();"><i
+                    class="bx bx-log-out">Logout</button>
+        </form>
+        <!-- <button class="lgbtn">
+            Logout
+            <i class="bx bx-log-out">
+        </button> -->
+        <div class="student-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        <h3> Student Registration Form</h3>
+                        <form action="/studentDetails" class="mb-5" method="post" id="contactForm" name="contactForm">
+                            <div class="row">
+                                <div class="col-md-4 form-group mb-3">
+                                    <label for="" class="col-form-label">First Name *</label>
+                                    <input type="text" class="form-control" name="name" id="name"
+                                        placeholder="First Name">
+                                </div>
+                                <div class="col-md-4 form-group mb-3">
+                                    <label for="" class="col-form-label">Middle Name *</label>
+                                    <input type="text" class="form-control" name="email" id="email"
+                                        placeholder="Middle Name">
+                                </div>
+                                <div class="col-md-4 form-group mb-3">
+                                    <label for="" class="col-form-label">Last Name *</label>
+                                    <input type="text" class="form-control" name="email" id="email"
+                                        placeholder="Last Name">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 form-group mb-3">
+                                    <label for="studentId" class="col-form-label">Student Id *</label>
+                                    <input class="form-control" type="text" placeholder="Student ID"
+                                        value="<%= student.studentID %>" name="studentID" required disabled>
+                                </div>
+                                <div class="col-md-6 form-group mb-3">
+                                    <label for="batch" class="col-form-label">Batch *</label>
+                                    <input class="form-control" type="text" placeholder="Batch"
+                                        value="<%= student.batch %>" name="batch" required disabled>
+                                </div>
+                            </div>
 
-            <% for (var k=0; k <program.length; k++) { %>
+                            <div class="row">
+                                <div class="col-md-12 form-group mb-3">
+                                    <label for="program" class="col-form-label">Program</label>
+                                    <select class="form-control custom-select" id="budget" name="budget">
+                                        <option value="Select" selected disabled required>Select</option>
+                                        <% for (var k=0; k <program.length; k++) { %>
 
-                <% var x=program[k].degreeOffered.name ; %>
-                    <% var y=program[k].branchOffered.name ; %>
+                                            <% var x=program[k].degreeOffered.name ; %>
+                                                <% var y=program[k].branchOffered.name ; %>
 
-                        <option value="<%= program[k].id %>">
-                            <%= x + " " + y %>
-                        </option>
-                        <% } %>
+                                                    <option value="<%= program[k].id %>">
+                                                        <%= x + " " + y %>
+                                                    </option>
+                                                    <% } %>
+                                    </select>
+                                </div>
+                            </div>
+                            <br>
+                            <h4>Physical Details</h4>
+                            <div class="row">
+                                <div class="col-lg-4 form-group mb-3">
+                                    <label for="bloodGroup" class="col-form-label">Blood Group*</label>
+                                    <select class="form-control custom-select" id="bloodGroup" name="bloodGroup">
+                                        <option class="b3" selected disabled hidden>
+                                            Select
+                                        </option>
+                                        <option value="A Positive">A Positive</option>
+                                        <option value="A Negative">A Negative</option>
+                                        <option value="B Positive">B Positive</option>
+                                        <option value="B Negative">B Negative</option>
+                                        <option value="AB Positive">AB Positive</option>
+                                        <option value="AB Negative">AB Negative</option>
+                                        <option value="O Positive">O Positive</option>
+                                        <option value="O Negative">O Negative</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-4 form-group mb-3">
+                                    <label for="pemail" class="col-form-label">Height *</label>
+                                    <input class="form-control" type="number" placeholder="Height in centimeters"
+                                        name="height" value="<%= student.height %>" required />
+                                </div>
+                                <div class="col-lg-4 form-group mb-3">
+                                    <label for="ppemail" class="col-form-label">Weight *</label>
+                                    <input class="form-control" type="number" placeholder="Weight in kilograms"
+                                        name="weight" value="<%= student.weight %>" required />
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 form-group mb-3 ">
+                                    <label for="gender" class="col-form-label">Gender *</label>
+                                    <div class="form control unique">
+                                        <div class="form-check-inline">
+                                            <input class="form-check-input" style="margin-top: 8px;" type="radio"
+                                                name="gender" id="male" value="Male">
+                                            <label class="form-check-label" for="inlineRadio1">Male</label>
+                                        </div>
+                                        <div class="form-check-inline">
+                                            <input class="form-check-input" style="margin-top: 8px;" type="radio"
+                                                name="gender" id="female" value="Female">
+                                            <label class="form-check-label">Female</label>
+                                        </div>
+                                        <div class="form-check-inline">
+                                            <input class="form-check-input" style="margin-top: 8px;" type="radio"
+                                                name="gender" id="other" value="Other">
+                                            <label class="form-check-label">Other</label>
+                                        </div>
+                                    </div>
+                                </div>
 
-        </select>
-        <input type="date" placeholder="Date of Birth" name="dob" required>
-        <input type="text" placeholder="Mobile number" name="mobileNO" required>
-        <input type="email" placeholder="College email ID" value="<%= student.email %>" name="email" disabled>
-        <input type="email" placeholder="Personal email ID" name="myemail" required>
-        <input type="email" placeholder="Parent email ID" name="parentEmail" required>
-        <div class="radio-checkbox-container">
-            <p>Gender</p>
-            <label> <input type="radio" id="male" name="gender" value="Male" required> <span>Male</span></label>
-            <label> <input type="radio" id="female" name="gender" value="Female" required> <span>Female</span></label>
-            <label> <input type="radio" id="other" name="gender" value="Other" required> <span>Other</span></label>
+                                <div class="col-md-6 date">
+                                    <label for="dob" class="col-form-label">Date of Birth *</label>
+                                    <input class="form-control input-dob" type="date" id="dob">
+                                </div>
+                            </div>
+                            <br>
+                            <h4>
+                                <bold>Contact Details</bold>
+                            </h4>
+                            <div class="row">
+                                <div class="col-md-12 form-group mb-3">
+                                    <label for="mobileno" class="col-form-label">Mobile No. *</label>
+                                    <input type="text" class="form-control" name="mobile-no" id="mobile-no"
+                                        placeholder="000-000-0000">
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6 form-group mb-3">
+                                    <label for="cmail" class="col-form-label">College E-mail *</label>
+                                    <input type="email" class="form-control" name="c-mail" id="c-mail"
+                                        placeholder="College E-mail" value="<%= student.email %>" disabled>
+                                </div>
+                                <div class="col-md-6 form-group mb-3">
+                                    <label for="pmail" class="col-form-label">Personal E-mail</label>
+                                    <input type="email" class="form-control" name="p-mail" id="p-mail"
+                                        placeholder="Personal E-mail">
+                                </div>
+                                <div class="col-md-12 form-group mb-3">
+                                    <label for="ppmail" class="col-form-label">Parent E-mail *</label>
+                                    <input type="email" class="form-control" name="pp-mail" id="pp-mail"
+                                        placeholder="Parent E-mail">
+                                </div>
+                                <div class="col-md-12 form-group mb-3">
+                                    <label for="address" class="col-form-label">Address *</label>
+                                    <input class="form-control" type="text" name="address"
+                                        placeholder="Residential address" required>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6 form-group mb-3">
+                                    <label for="New-Password" class="col-form-label">New Password *</label>
+                                    <input type="password" class="form-control" name="password" id="password"
+                                        placeholder="Enter Password">
+                                </div>
+                                <div class="col-md-6 form-group mb-3">
+                                    <label for="Confirm-Password" class="col-form-label">Confirm Password *</label>
+                                    <input type="password" class="form-control" name="repassword" id="repassword"
+                                        placeholder="Enter password">
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-md-12 form-group mb-3">
+                                    <label for="picture" class="col-form-label">Select Picture *</label>
+                                    <input type="file" class="form-control" name="picture" id="picture">
+                                </div>
+
+                            </div>
+
+                            <div class="input-field">
+                                <input type="submit" class="submit" value="Submit">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <input type="password" name="password" placeholder="New password" required>
-        <input type="password" name="repassword" placeholder="Confirm password" required>
-        <input type="number" name="height" placeholder="Height in centimeter" required>
-        <input type="number" name="weight" placeholder="Weight in kilograms" required>
-        <label for="bloodGroup">Blood group :</label>
-            <select name="bloodGroup" id="bloodGroup">
-                <option selected disabled>select</option>
-                <option value="A Positive" > A Positive </option>
-                <option value="A Negative" >A Negative</option>
-                <option value="B Positive" >B Positive</option>
-                <option value="B Negative" >B Negative</option>
-                <option value="AB Positive" >AB Positive</option>
-                <option value="AB Negative" >AB Negative</option>
-                <option value="O Positive" >O Positive</option>
-                <option value="O Negative" >O Negative</option>
-            </select>
-        <input type="text" name="address" placeholder="Residential address" required>
-        <label for="picture">Select Picture:</label>
-        <input type="file" name="picture" id="picture">
-        <button type="submit">Submit</button>
-    </form>
+
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        function showConfirmation() {
+            Swal.fire({
+                title: 'Sign out?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Submit the form
+                    document.querySelector('form').submit();
+                }
+            })
+        }
+    </script>
 </body>
 
 </html>
