--- a/views/studentDetails.ejs
+++ b/views/studentDetails.ejs
@@ -13,16 +13,10 @@
 </head>
 
 <body>
-
+    <form action="/logoutStudent?_method=DELETE" method="POST">
+        <button type="submit" class="lgbtn" onclick="event.preventDefault(); showConfirmation();">Logout</button>
+    </form>
     <section class="form-body">
-        <form action="/logoutStudent?_method=DELETE" method="POST">
-            <button type="submit" class="lgbtn" onclick="event.preventDefault(); showConfirmation();"><i
-                    class="bx bx-log-out">Logout</button>
-        </form>
-        <!-- <button class="lgbtn">
-            Logout
-            <i class="bx bx-log-out">
-        </button> -->
         <div class="student-container">
             <div class="row align-items-stretch no-gutters contact-wrap">
                 <div class="col-md-12">
