--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
     font-family: 'Spartan', sans-serif;
     margin-left: 29%;
     margin-top: 5%;
-    margin-bottom: 3%;
+    margin-bottom: 1%;
 }
 .sub-header h3,h5,h4{
     margin-left: 29%;
@@ -587,6 +587,41 @@ th {
 }
 .profile-table th{
     width: 25%;
+}
+
+
+.data-container{
+
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(240, 240, 240);
+  border-radius: 10px;
+  margin-bottom: 2%;
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.2);
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 100%;
+}
+
+.textfield{
+  padding-top: 15px;
+  text-align: center !important;
+  font-size: 24px;
+}
+.data-table{
+  font-size: 17px;
+  margin-left: 20px;
+  text-align: left;
+  padding-left: 20px;
+  border-collapse: collapse;
+  width:95%
+}
+.data-table td,th{
+  padding: 5px;
+  padding-left: 20px;
+  border: 1px solid rgb(220, 220, 220);
+}
+.data-table th{
+  width: 30%;
 }
 @media (max-width: 767px){
     .student-container{
