--- a/public/css/form.css
+++ b/public/css/form.css
@@ -6,7 +6,10 @@
 }
 .form-body{
     display: grid;
-    justify-content: space-around;
+}
+.form1-body{
+  display: grid;
+  justify-content: space-around;
 }
 .lgbtn{
     align-items: center;
