--- a/views/instructorDetails.ejs
+++ b/views/instructorDetails.ejs
@@ -14,7 +14,7 @@
 
 <body>
 
-    <section class="form-body">
+    <section class="form1-body">
         <form action="/logoutInstructor?_method=DELETE" method="POST">
             <button type="submit" class="logout lgbtn" onclick="event.preventDefault(); showConfirmation();">Logout<i
                     class="bx bx-log-out"></button>
