--- a/views/studentDetails.ejs
+++ b/views/studentDetails.ejs
@@ -16,7 +16,7 @@
     <form action="/logoutStudent?_method=DELETE" method="POST">
         <button type="submit" class="lgbtn" onclick="event.preventDefault(); showConfirmation();">Logout</button>
     </form>
-    <section class="form-body">
+    <section class="form1-body">
         
         <!-- <button class="lgbtn">
             Logout
