--- a/views/viewSemester.ejs
+++ b/views/viewSemester.ejs
@@ -46,13 +46,13 @@
                                         }; %>
                                                 <%= semester[i].dateCreated.toLocaleDateString("en-US", options) %>
                                 </div>
-                                <div class="col col-5" data-label="Name">
-                                    <button type='submit' name="edit" value="<%= semester[i].id %>"><i
-                                            class='far fa-edit'></i></button>
+                                <div class="col col-5 input-field" data-label="Name">
+                                    <button class="mybtn" type='submit' name="edit" value="<%= semester[i].id %>"><i
+                                            class='fa-solid fa-edit'></i></button>
                                 </div>
-                                <div class="col col-6" data-label="Batch">
-                                    <button type='submit' name="delete" value="<%= semester[i].id %>"
-                                        class="delete-btn"><i class='far fa-trash-alt'></i></button>
+                                <div class="col col-6 input-field" data-label="Batch">
+                                    <button class="mybtn" type='submit' name="delete" value="<%= semester[i].id %>"
+                                        class="delete-btn"><i class='fa-solid fa-trash'></i></button>
                                 </div>
                             </li>
                             <% } %>
@@ -60,14 +60,17 @@
                 </form>
 
                 <br>
-                <button onclick="window.location.href = '/addSemester'"> Add Semester </button>
-            </div>
+                <div class="button-container">
+                    <button class="hover-button" onclick="window.location.href = '/addSemester'">
+                      <i class="fas fa-plus"></i>
+                    </button>
+                    <div class="tooltip">Add Semester</div>
+                  </div>
 
         </section>
 
 
         <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script>
             let btns = document.getElementsByClassName('delete-btn');
 
