--- a/views/gradeCard.ejs
+++ b/views/gradeCard.ejs
@@ -24,31 +24,21 @@
             <h2>Attendance</h2>
             <% } %>
     </div>
-   
+    <div class="sub-header">
+        <h5>
+            Semester number: <%= tuple[1] %>
+        </h5>
+        <h5>Name: <%= result[0].studentEnrolled.firstname %>
+                <%= result[0].studentEnrolled.middlename %>
+                    <%= result[0].studentEnrolled.lastname %>
+        </h5>
+        <h5>Student ID: <%= result[0].studentEnrolled.studentID %>
+        </h5>
+    </div>
     <section class="home-section">
         <div class="table-container">
             <form action="/gradeCard" method="post">
                 <ul class="table-responsive-lg">
-                    <div class="data-container">
-                        <table class="data-table">
-                            
-                            <tr>
-                                <th><strong>Semester</strong></th>
-                                <td><%= tuple[1] %></td>
-                            </tr>
-                            <tr>
-                                <th><strong>Name</strong></th>
-                                <td><%= result[0].studentEnrolled.firstname %>
-                                    <%= result[0].studentEnrolled.middlename %>
-                                        <%= result[0].studentEnrolled.lastname %></td>
-                            </tr>
-                            <tr>
-                                <th><strong>Student ID</strong></th>
-                                <td><%= result[0].studentEnrolled.studentID %></td>
-                            </tr>
-                           
-                        </table>
-                    </div>
                     <li class="thead-dark">
                         <div class="col col-1">SR No</div>
                         <div class="col col-2">Course Code</div>
@@ -105,18 +95,22 @@
                         <% spi=Math.round(spi * 100) / 100 %>
                             <h4>SPI: <%= spi %>
                             </h4>
-                            <button type="submit" name="result"
+                            <button type="submit" name="result" class="submit"
                                 value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
 
                             <% } else if (signal=="1") { %>
                                 <h4>SPI: Not declared</h4>
-                                <button disabled type="submit" name="result"
+                                <div class="input-field">
+                                <button disabled class="submit" type="submit" name="result"
                                     value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
+                                </div>
                                 <% } %>
             </form>
-
+            <br>
+            <br>
         </div>
     </section>
+
 
 </body>
 
