--- a/views/addComplain.ejs
+++ b/views/addComplain.ejs
@@ -12,23 +12,39 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/form.css">
     <title>Complain Box</title>
 </head>
 
 <body>
     <%- include('studentNavbar') %>
-        <div class="header">
-            <h2>Add Complain</h2>
+    <section class="form-body">
+
+        <div class="form-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        
+                        <h3>Add Complain</h3>
+                    
+                        <form action="/addComplain" method="post" class="mb-5" id="contactForm" name="contactForm">
+            
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="Branch" class="col-form-label">Complain </label>
+                                    <input type="text" class="form-control" name="complain" id="complain" placeholder="Complain">       
+                                </div>
+                         
+                                <div class="input-field">
+                                    <button class="submit" onclick="window.location.href = '/addComplain'"> Submit </button>
+                                </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
-
-        <div class="sub-header">
-            <form action="/addComplain" method="post">
-                <input type="text" name="complain" id="complain" placeholder="Complain">
-                <button onclick="window.location.href = '/addComplain'"> Submit </button>
-            </form>
-        </div>
-
-
+    </section>
 </body>
 
 </html>
