--- a/views/updateBranch.ejs
+++ b/views/updateBranch.ejs
@@ -11,18 +11,39 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/form.css">
     <title>Update Branch</title>
 </head>
 
 <body>
     <%- include('adminNavbar') %>
-        <div class="main-body-top">
-            <form action="/updateBranch" method="post">
-                <input type="text" placeholder="Branch name" name="name" value="<%= branch.name %>">
-                <button type="submit" name="btn" value="<%= branch.id %>">Update</button>
-            </form>
+    <section class="form-body">
+
+        <div class="form-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        
+                        <h3>Update Branch</h3>
+                    
+                        <form action="/updateBranch" method="post" class="mb-5" id="contactForm" name="contactForm">
+                           
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="branch" class="col-form-label">Branch *</label>
+                                    <input type="text" class="form-control" placeholder="Branch name" name="name" value="<%= branch.name %>">
+                                </div>
+                                <div class="input-field">
+                                    <button class="submit" type="submit" name="btn" value="<%= branch.id %>">Update</button>
+                                </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
+    </section>
 </body>
 
 </html>
