--- a/views/viewProgram.ejs
+++ b/views/viewProgram.ejs
@@ -58,22 +58,26 @@
 
                                                         <% } %>
                                 </div>
-                                <div class="col col-5" data-label="Branch">
-                                    <button type='submit' name="edit" value="<%= program[i].id %>"><i
-                                            class='far fa-edit'></i></button>
+                                <div class="col col-5 input-field" data-label="Branch">
+                                    <button type='submit' class="mybtn" name="edit" value="<%= program[i].id %>"><i
+                                            class='fa-solid fa-edit'></i></button>
                                 </div>
-                                <div class="col col-6" data-label="Branch">
-                                    <button type='submit' name="delete" value="<%= program[i].id %>"
-                                        class="delete-btn"><i class='far fa-trash-alt'></i></button>
+                                <div class="col col-6 input-field" data-label="Branch">
+                                    <button type='submit' class="mybtn" name="delete" value="<%= program[i].id %>"
+                                        class="delete-btn"><i class='fa-solid fa-trash'></i></button>
                                 </div>
                             </li>
                             <% } %>
                     </ul>
                 </form>
 
+                <div class="button-container">
+                    <button class="hover-button" onclick="window.location.href = '/addProgram'">
+                      <i class="fas fa-plus"></i>
+                    </button>
+                    <div class="tooltip">Add Semester</div>
+                  </div>
 
-                <br>
-                <button onclick="window.location.href = '/addProgram'"> Add Program </button>
 
             </div>
         </section>
