ViewInstructor & adddrop & Update Course & Instructor semester page added

--- a/views/updateCourse.ejs
+++ b/views/updateCourse.ejs
@@ -11,20 +11,52 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/form.css">
     <title>Update Course</title>
 </head>
 
 <body>
     <%- include('adminNavbar') %>
-        <div class="main-body-top">
-            <form action="/updateCourse" method="post">
-                <input type="text" placeholder="Name" name="name" value="<%= course.name %>">
-                <input type="text" placeholder="Code" name="code" value="<%= course.code %>">
-                <input type="number" step=".1" placeholder="Credits" name="credits" value="<%= course.credits %>">
-                <input type="text" placeholder="Description" name="description" value="<%= course.description %>">
-                <button type="submit" name="btn" value="<%= course.id %>">Update</button>
-            </form>
+    <section class="form-body">
+
+        <div class="form-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        
+                        <h3>Update Course</h3>
+                    
+                        <form action="/updateCourse" method="post" class="mb-5" id="contactForm" name="contactForm">
+                           
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="coursename" class="col-form-label">Course Name *</label>
+                                    <input type="text" class="form-control" placeholder="Name" name="name" value="<%= course.name %>">
+                                </div>
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="coursecode" class="col-form-label">Course Code *</label>
+                                    <input type="text" class="form-control" placeholder="Code" name="code" value="<%= course.code %>">
+                                </div>
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="coursecredit" class="col-form-label">Course Credit *</label>
+                                    <input class="form-control" type="number" step=".1" placeholder="Credits" name="credits" value="<%= course.credits %>">
+                                </div>
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="coursedes" class="col-form-label">Course Description</label>
+                                    <input type="text" class="form-control" placeholder="Description" name="description" value="<%= course.description %>">
+                                </div>
+                                
+                                <div class="input-field">
+                                    <button class="submit" type="submit" name="btn" value="<%= course.id %>">Update</button>
+                                </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
+
+    </section>
 
 </body>
 
