--- a/views/viewInstructor.ejs
+++ b/views/viewInstructor.ejs
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
@@ -17,48 +15,54 @@
 <body>
     <%- include('instructorNavbar') %>
         <!-- main body section -->
-        <div class="header">
-            <h2>Personal Details</h2>
-        </div>
-        <div class="sub-header">
-            <h5> <b>Full name : </b>
-                <%= instructor.fullname %>
-            </h5>
-            <% var options={ weekday: 'long' , year: 'numeric' , month: 'long' , day: 'numeric' }; %>
-                <h5> <b>Date of Birth : </b>
-                    <%= instructor.dob.toLocaleDateString("en-US", options) %>
-                </h5>
-                <h5> <b>Gender : </b>
-                    <%= instructor.gender %>
-                </h5>
-                <h5> <b>Mobile Number : </b>
-                    <%= instructor.mobileNO %>
-                </h5>
-                <h5> <b>Personal Email : </b>
-                    <%= instructor.myemail %>
-                </h5>
-                <h5> <b>Profile picture : </b>
-                    <% if (typeof(instructor.profilePicture)==='undefined') { %>
-                        <img src="img/dp.PNG" alt="">
-                    <% } else { %>
-                        <img src="data:<%= instructor.profilePicture.contentType %>;base64,<%= instructor.profilePicture.toString('base64') %>" alt="Profile Picture">
-                    <% } %>
-                </h5>
-        </div>
-        <div class="header">
-            <h2>Academic Details</h2>
-        </div>
-        <div class="sub-header">
-            <br>
-            <h5> <b>College Email : </b>
-                <%= instructor.email %>
-            </h5>
-            <h5>
-                <b>Date of joining : </b>
-                <% if (!typeof(instructor.profilePicture)==='undefined') { %>
-                    <%= instructor.joiningDate.toLocaleDateString("en-US", options) %>
-                    <% } %>  
-            </h5>
+        <div class="student-container">
+            <div class="st-left">
+                <div class="left-head">
+                    <div class="profile">
+                        <% if (typeof(instructor.profilePicture)==='undefined') { %>
+                            <img class="profile-image" src="img/dp.PNG" alt="">
+                        <% } else { %>
+                            <img class="profile-image" src="data:<%= instructor.profilePicture.contentType %>;base64,<%= instructor.profilePicture.toString('base64') %>" alt="Profile Picture">
+                        <% } %> 
+                    </div> 
+                    <div class="name">           
+                    <strong><%= instructor.fullname %></strong>
+                    </div>
+
+                </div>
+                <div class="left-body">
+                    <p class="field"><strong>College Email:</strong> <%= instructor.email %></p>
+                    <p class="field"><strong>Date of joining:</strong><% if (!typeof(instructor.profilePicture)==='undefined') { %>
+                        <%= instructor.joiningDate.toLocaleDateString("en-US", options) %>
+                        <% } %> </p>
+                </div>
+            </div>
+            <div class="st-right">
+                <p class="field1"><strong>General Information</strong></p>
+                <table class="profile-table">
+                    
+                    <tr>
+                        <% var options={ weekday: 'long' , year: 'numeric' , month: 'long' , day: 'numeric' }; %>
+                        <th><strong>Birth Date</strong></th>
+                        <td> <%= instructor.dob.toLocaleDateString("en-US", options) %></td>
+                    </tr>
+                    <tr>
+                        <th><strong>Gender</strong></th>
+                        <td><%= instructor.gender %></td>
+                    </tr>
+                </table>
+                <p class="field1"><strong>Contact Information</strong></p>
+                <table class="profile-table">
+                    <tr>
+                        <th><strong>Contact No.</strong></th>
+                        <td> <%= instructor.mobileNO %></td>
+                    </tr>
+                    <tr>
+                        <th><strong>Personal Email</strong></th>
+                        <td> <%= instructor.myemail %></td>
+                    </tr>
+                    </table>
+            </div>
         </div>
 </body>
 
